--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,11 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.15",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
