--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,17 +7,21 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@types/styled-components": "^5.1.15",
+    "graphql": "^15.6.1",
+    "graphql-request": "^3.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.15",
     "@vitejs/plugin-react": "^1.0.0",
     "typescript": "^4.3.2",
-    "vite": "^2.6.4"
+    "vite": "^2.6.4",
+    "vite-tsconfig-paths": "^3.3.17"
   }
 }
